@@ -4,7 +4,6 @@ import com.danielwolski.reportingestor.kafka.KafkaEventPublisher;
 import com.danielwolski.reportingestor.reports.dto.BugReport;
 import com.danielwolski.reportingestor.reports.events.BugReportEvent;
 import com.danielwolski.reportingestor.storage.StorageService;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -12,6 +11,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -23,24 +24,21 @@ public class ReportService {
     private final ObjectMapper objectMapper;
 
     public void ingestBugReport(BugReport report, List<MultipartFile> files) {
-        try {
-            String eventJson = getBugReportEventJson(report, files);
-            kafkaEventPublisher.publishEvent(eventJson);
-            log.info("BugReport ingested successfully");
-        } catch (Exception e) {
-            log.error("Failed to ingest BugReport", e);
-        }
-    }
-
-    private String getBugReportEventJson(BugReport report, List<MultipartFile> files) throws JsonProcessingException {
-        List<String> fileUrls = storeFilesAndGetUrls(files);
-        BugReportEvent event = new BugReportEvent(report, fileUrls);
-        return objectMapper.writeValueAsString(event);
-    }
-
-    private List<String> storeFilesAndGetUrls(List<MultipartFile> files) {
-        return files.stream()
+        List<String> fileUrls = files.stream()
                 .map(storageService::store)
-                .toList();
+                .collect(Collectors.toList());
+
+        log.info("Stored {} files for the report", fileUrls.size());
+
+        BugReportEvent event = new BugReportEvent(report, fileUrls);
+        String reportKey = UUID.randomUUID().toString();
+
+        try {
+            String eventJson = objectMapper.writeValueAsString(event);
+            kafkaEventPublisher.publishEvent(reportKey, eventJson);
+            log.info("Bug report ingestion process initiated with key '{}'", reportKey);
+        } catch (Exception e) {
+            log.error("Failed to serialize or publish bug report event with key '{}'", reportKey, e);
+        }
     }
 }
